--- a/.classpath
+++ b/.classpath
@@ -6,29 +6,18 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/Users/avergara/Documents/libs/commons-logging-1.0.4.jar"/>
-	<classpathentry kind="lib" path="/Users/avergara/Documents/libs/hive-jdbc-1.1.0.jar"/>
-	<classpathentry kind="lib" path="/Users/avergara/Documents/libs/libfb303-0.9.0.jar"/>
-	<classpathentry kind="lib" path="/Users/avergara/Documents/libs/libthrift-0.9.0.jar"/>
-	<classpathentry kind="lib" path="/Users/avergara/Documents/libs/log4j-1.2.16.jar"/>
-	<classpathentry kind="lib" path="/Users/avergara/Documents/libs/slf4j-log4j12-1.6.1.jar"/>
-	<classpathentry kind="lib" path="/Users/avergara/Documents/libs/slf4j.api-1.6.1.jar"/>
-	<classpathentry kind="lib" path="/Users/avergara/Documents/libs/httpclient-4.3.3.jar"/>
-	<classpathentry kind="lib" path="/Users/avergara/Documents/libs/apache-httpcomponents-httpcore.jar"/>
-	<classpathentry kind="lib" path="/Users/avergara/Documents/libs/hive-service-0.13.1.jar"/>
-	<classpathentry kind="lib" path="/Users/avergara/Documents/libs/hadoop-common-0.21.0.jar"/>
-	<classpathentry kind="lib" path="/Users/avergara/Documents/libs/hive-exec-0.8.1.jar"/>
-	<classpathentry kind="lib" path="/Users/avergara/Documents/libs/com.google.guava_1.6.0.jar"/>
 	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/Users/avergara/Documents/libs/scala-library-2.9.0.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="/Users/avergara/Documents/libs/scala-library-2.9.0.jar"/>
+	<classpathentry kind="lib" path="/Users/avergara/Documents/libs/kafka_2.9.2-0.8.2.1.jar"/>
+	<classpathentry kind="lib" path="/Users/avergara/Documents/libs/kafka-clients-0.8.2.1.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
