--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,26 @@
   <version>0.0.3</version>
   
   <dependencies>
-       
-        <dependency>
-            <groupId>org.apache.spark</groupId>
-            <artifactId>spark-core_2.10</artifactId>
-            <version>1.2.0</version>
-        </dependency>
+
         
+        <dependency>
+		    <groupId>org.scala-lang</groupId>
+		    <artifactId>scala-reflect</artifactId>
+		    <version>2.10.2</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.scala-lang</groupId>
+			<artifactId>scala-library</artifactId>
+			<version>2.9.0</version>
+		</dependency>
+		
+       <dependency>
+			<groupId>org.apache.kafka</groupId>
+			<artifactId>kafka-clients</artifactId>
+			<version>0.8.2.1</version>
+		</dependency>
+		
 		 <dependency>
 		  <groupId>org.apache.kafka</groupId>
 		  <artifactId>kafka_2.9.2</artifactId>
@@ -38,6 +51,39 @@
   <build>
     <sourceDirectory>src</sourceDirectory>
     <plugins>
+    <plugin>
+	<groupId>org.apache.maven.plugins</groupId>
+	<artifactId>maven-jar-plugin</artifactId>
+	<version>2.4</version>
+	<configuration>
+	  <archive>
+	    <manifest>
+		<addClasspath>true</addClasspath>
+	    </manifest>
+	  </archive>
+	</configuration>
+    </plugin>
+    
+    <plugin>
+	<groupId>org.apache.maven.plugins</groupId>
+	<artifactId>maven-dependency-plugin</artifactId>
+	<version>2.5.1</version>
+	<executions>
+	  <execution>
+		<id>copy-dependencies</id>
+		<phase>package</phase>
+		<goals>
+		    <goal>copy-dependencies</goal>
+		</goals>
+		<configuration>
+		    <outputDirectory>
+                          ${project.build.directory}/dependency-jars/
+                    </outputDirectory>
+		</configuration>
+	    </execution>
+	</executions>
+  </plugin>
+    
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.1</version>
